# presser

./: .gitignore  BUILD_VERIFICATION.md  CLAUDE.md  Cargo.toml  README.md  SCAFFOLD_STATUS.md  documentation_index.md  progress.md
crates/presser-ai/: Cargo.toml
crates/presser-ai/src/: error.rs  lib.rs  providers.rs
crates/presser-config/: Cargo.toml
crates/presser-config/src/: error.rs  lib.rs  validation.rs
crates/presser-core/: Cargo.toml
crates/presser-core/src/: commands.rs  engine.rs  lib.rs  main.rs  tasks.rs
crates/presser-core/src/ui/: app.rs  mod.rs  widgets.rs
crates/presser-db/: Cargo.toml
crates/presser-db/migrations/: 20240101000001_initial_schema.sql
crates/presser-db/src/: error.rs  lib.rs  models.rs  queries.rs
crates/presser-feeds/: Cargo.toml
crates/presser-feeds/src/: error.rs  extractor.rs  lib.rs  parser.rs
crates/presser-scheduler/: Cargo.toml
crates/presser-scheduler/src/: error.rs  lib.rs  task.rs
docs/: ARCHITECTURE.md  CONFIG.md
examples/config/: global.toml
examples/config/feeds/: newsletters.toml  tech-news.toml
