[package]
name = "presser-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Configuration management for Presser - RSS feed processor with AI summarization"

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Time handling
chrono.workspace = true
cron.workspace = true

# Utilities
dirs.workspace = true
regex.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3.8"
