[package]
name = "presser-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Presser - AI-powered RSS feed processor and digest generator"

[[bin]]
name = "presser"
path = "src/main.rs"

[dependencies]
# Internal crates
presser-config.workspace = true
presser-feeds.workspace = true
presser-scheduler.workspace = true
presser-ai.workspace = true
presser-db.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# CLI
clap.workspace = true

# TUI
crossterm.workspace = true
ratatui.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dirs.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = []
local-llm = ["presser-ai/local-llm"]
