[package]
name = "presser-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Database layer for Presser using SQLite"

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# Database
sqlx = { workspace = true, default-features = false }

# Time handling
chrono.workspace = true

# Logging
tracing.workspace = true

# Utilities
dirs.workspace = true

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
